# seqgen

./: .coveragerc  .gitignore  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: actions.yaml
number_generator/: __init__.py  api.py  data_generator.py  model.py  num_gen.py  number_generator.py
number_generator/utils/: __init__.py  data_handler.py  losses.py
src/: __init__.py  number_generator.py
src/utils/: __init__.py  data_handler.py
tests/: test_data_generator.py  test_generate_numbers_sequence.py  test_generate_phone_numbers.py
