[tool.poetry]
name = "seqgen"
version = "0.1.0"
description = ""
authors = ["Anuj"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.3"
matplotlib = "^3.4.2"
Pillow = "^8.2.0"

[tool.poetry.dev-dependencies]
black = "^21.5b2"
isort = "^5.8.0"
pylint = "^2.8.3"
coverage-badge = "^1.0.1"
pytest-cov = "^2.12.1"
pylint-fail-under = "^0.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
